# haskell-mn-presentations

./: README.md
2014/09/echo-server/: 1.hs  2.hs  3.hs  4.hs  5.hs  6.hs  7.hs  8.hs  README.md  connect.sh  test.sh
2014/10/server-side-web/: .gitignore  Main.hs  README.md  server-side-web.cabal
2015/01/algebraic-data-types-in-c/: .gitignore  README.md  main.c  main.hs
2015/01/rust-hearts-haskell/: README.md  notes.md  sliderust.css  sliderust.js  slides.html  slides.md
2015/03/thunks-tail-calls-trampolines/: build.sh  index.html  index.md
2015/06/: PersistentVector.hs  persistent-vector.js
2015/09/: build.sh  index.html  index.md
2016/02/write-yourself-a-scheme/: README.md  scheme.cabal  stdlib.scm
2016/02/write-yourself-a-scheme/app/: 1.hs  10.hs  11.hs  12.hs  13.hs  14.hs  2.hs  3.hs  4.hs  5.hs  6.hs  7.hs  8.hs  9.hs
