name:                scheme
version:             0.1.0.0
description:         Please see README.md
build-type:          Simple
cabal-version:       >=1.10

executable scheme
  hs-source-dirs:      app
  main-is:             14.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1 && < 4
                     , mtl >= 2.2 && < 3
  default-language:    Haskell2010
